tests/NormalTests/paczka1/fuzzy1/82404810.err
Error in line 1: QqyUd7pkVZ A412 57,1
Error in line 8: ALR1 S8 17,8
Error in line 12: ALR1 A533 22,3
Error in line 10: XReRpxiKU A412 15,8
Error in line 11: QqyUd7pkVZ A412 76,2
Error in line 26: Ves4Bmnim S8 24,19
Error in line 20: QqyUd7pkVZ S8 76,5
Error in line 36: ALR. S8 24,2
